--- a/src/assets/scss/_components.scss
+++ b/src/assets/scss/_components.scss
@@ -1,9 +1,3 @@
-.logo {
-    display: inline-block;
-    width: 100px;
-    height: auto;
-}
-
 .hero {
     border-bottom: 1px solid var(--divider-color);
 
