--- a/src/assets/scss/_header.scss
+++ b/src/assets/scss/_header.scss
@@ -17,22 +17,18 @@
     }
 }
 
-
 .logo-link {
     display: inline-flex;
     justify-self: start;
     flex: none;
+    place-content: center;
     grid-column: 1 / -1;
     grid-row: 1;
     padding: .5rem 0;
 }
 
-.logo {
-    display: inline-flex;
-    place-content: center;
-}
-
 .logo svg {
+    display: block;
     width: 100%;
     max-width: 100px;
     height: auto;
